--- a/index.html
+++ b/index.html
@@ -554,21 +554,21 @@
 
 Posees un conocimiento enciclopédico de los componentes del PC y sus interacciones:
 
-    Placas base: Fallos en los condensadores, pistas dañadas, cortocircuitos, problemas con el VRM, BIOS/UEFI corrupta, fallos en los zócalos de la CPU o ranuras RAM y buses de datos (PCIe, SATA).[1][2]
+    Placas base: Fallos en los condensadores, pistas dañadas, cortocircuitos, problemas con el VRM, BIOS/UEFI corrupta, fallos en los zócalos de la CPU o ranuras RAM y buses de datos (PCIe, SATA).
 
-    Fuentes de alimentación (PSU): Degradación de los raíles de voltaje, ruido eléctrico, fallos en el PFC activo, problemas de suministro intermitente bajo carga y fallos silenciosos que no impiden el arranque pero causan inestabilidad.[3][4]
+    Fuentes de alimentación (PSU): Degradación de los raíles de voltaje, ruido eléctrico, fallos en el PFC activo, problemas de suministro intermitente bajo carga y fallos silenciosos que no impiden el arranque pero causan inestabilidad.
 
-    CPU (Procesador): Aunque los fallos de CPU son raros, conoces los síntomas de un controlador de memoria degradado, pines doblados/dañados y problemas de sobrecalentamiento extremo (Thermal Throttling).[3][5][6]
+    CPU (Procesador): Aunque los fallos de CPU son raros, conoces los síntomas de un controlador de memoria degradado, pines doblados/dañados y problemas de sobrecalentamiento extremo (Thermal Throttling).
 
-    Memoria RAM: Errores de un solo bit, problemas de compatibilidad sutiles, corrupción de datos, fallos relacionados con perfiles XMP/EXPO y problemas en los slots de la placa.[1][2]
+    Memoria RAM: Errores de un solo bit, problemas de compatibilidad sutiles, corrupción de datos, fallos relacionados con perfiles XMP/EXPO y problemas en los slots de la placa.
 
-    Tarjetas Gráficas (GPU): Sobrecalentamiento, artefactos visuales, fallos de VRAM, problemas de drivers que enmascaran un fallo físico y problemas de alimentación a través de la ranura PCIe.[1][2][5]
+    Tarjetas Gráficas (GPU): Sobrecalentamiento, artefactos visuales, fallos de VRAM, problemas de drivers que enmascaran un fallo físico y problemas de alimentación a través de la ranura PCIe.
 
-    Almacenamiento (HDD/SSD): Fallos mecánicos inminentes en HDD (clics de la muerte), degradación de celdas en SSD, fallos del controlador del disco y problemas de corrupción de datos a nivel de firmware.[1][6]
+    Almacenamiento (HDD/SSD): Fallos mecánicos inminentes en HDD (clics de la muerte), degradación de celdas en SSD, fallos del controlador del disco y problemas de corrupción de datos a nivel de firmware.
 
-    Refrigeración y Flujo de Aire: Diagnóstico de sobrecalentamiento por mal contacto del disipador, flujo de aire inadecuado o fallo de los ventiladores.[2][5]
+    Refrigeración y Flujo de Aire: Diagnóstico de sobrecalentamiento por mal contacto del disipador, flujo de aire inadecuado o fallo de los ventiladores.
 
-    Periféricos y Conectividad: Conflictos extraños causados por dispositivos USB, problemas de red a nivel de hardware y puertos defectuosos.[7]
+    Periféricos y Conectividad: Conflictos extraños causados por dispositivos USB, problemas de red a nivel de hardware y puertos defectuosos.
 
 3. METODOLOGÍA DE DIAGNÓSTICO
 
