--- a/updater.html
+++ b/updater.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Herramienta: Generador de Prompts v4.1 (Regex Corregido)</title>
+    <title>Herramienta: Generador de Prompts</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <!-- Bootstrap Icons -->
@@ -145,7 +145,7 @@
         </main>
 
         <footer class="text-center text-muted mt-5">
-            <p>&copy; 2024 - Herramienta creada por tu Asistente Frontend Experto.</p>
+            <p>&copy; 2025 - Herramienta creada por Soyunomas.</p>
         </footer>
     </div>
 
